--- a/index_pose.html
+++ b/index_pose.html
@@ -33,7 +33,7 @@
     --subs-drop: 1cqh;   /* quanto scende SUBS sotto la linea di fondo */
 
     /* === Pennellata: quanto deve “sbordare” verticalmente === */
-    --brush-bleed-y: .9cqh;
+    --brush-bleed-y: 2cqh;
   }
 
   html,body{height:100%}
