--- a/index_pose.html
+++ b/index_pose.html
@@ -36,9 +36,9 @@
 
     /* === MATCHDAY (macchia) === */
     --md-w: 88cqw;                          /* larghezza splash */
-    --md-font: min(2.0cqh, 2.6cqw);         /* testo “grosso ma non enorme” */
+    --md-font: 2.6cqw;                      /* testo “grosso ma non enorme” */
     --md-splat-bleed: 2.2cqh;               /* quanto sborda la macchia in alto/basso */
-    --md-glow: 16px;                         /* bagliore del testo */
+    --md-glow: 16px;                        /* bagliore del testo */
   }
 
   html,body{height:100%}
