--- a/index_pose.html
+++ b/index_pose.html
@@ -136,10 +136,10 @@
     font-size: var(--md-font);
     letter-spacing:.22cqw;
     padding: 0 .8cqw;
-    text-shadow:
+    /*text-shadow:
       0 0 calc(var(--md-glow)*.40) rgba(255,255,255,.35),
       0 0 var(--md-glow) rgba(0, 128, 255, .30);
-    filter: drop-shadow(0 2px 10px rgba(0,0,0,.35));
+    filter: drop-shadow(0 2px 10px rgba(0,0,0,.35));*/
     pointer-events:none; z-index:3;
   }
   .matchday-badge::before{
